2011-07-03  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-widget-map): Add [mouse-1] and [mouse-2].
	(debbugs-emacs): Add :help-echo and :suppress-done for report
	pages' widgets.
	(debbugs-show-reports): Remove suppress-done from arguments. It
	must be read from the widget anyway. Tune inserting of bottom line
	widgets.

2011-07-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-emacs): Don't use widgets to provide
	clickable links, since that requires you to select certain parts
	of the line, which is annoying.
	(debbugs-show-reports): Store the status in the buffer.
	(debbugs-display-status): New command and keystroke.
	(debbugs-widget-map): New keymap.
	(debbugs-emacs): Use it.
	(debbugs-toggle-sort): Make sorting work again.
	(debbugs-toggle-sort): Use `debbugs-current-id'.
	(debbugs-toggle-sort): Don't move point around so much.
	(debbugs-summary-mode): Ignore submit@debbugs addresses, too.

2011-07-03  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-emacs, debbugs-show-reports): Rewrite in
	order to use widgets exclusively.
	(debbugs-widget-format-handler): New defun.
	(debbugs-mode-map): Derive from `special-mode-map'. Use
	`widget-keymap' as parent map.
	(debbugs-select-report): Add bug id as parameter.

2011-07-02  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-emacs): Move reporting lines to
	`debbugs-show-reports'.  Create widgets for every report page.
	(debbugs-show-reports): New defun.
	(debbugs-select-report): Handle also page links.

2011-07-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-summary-mode): Make sure we don't Cc
	both bug-gnu-emacs (etc) and debbugs.
	(debbugs-emacs): Default to list the done bugs.
	(debbugs-toggle-sort): New command and keystroke.
	(debbugs-send-control-message): Record the bug number on group
	entry, so that we don't have to rely on subject header mangling,
	which is fragile.